test/error/unm2.luau
local v = "hello world"
print(-v)
